fixed various loading and css layout issues for more info component

--- a/src/App.css
+++ b/src/App.css
@@ -510,7 +510,7 @@ projectsBtn--black .project__title {
   margin: 24px 0;
 }
 
-.project__more-info--wrapper {
+.project__more-info--bg {
   position: fixed;
   top: 0;
   left: 0;
@@ -523,29 +523,29 @@ projectsBtn--black .project__title {
   justify-content: center;
 }
 
-.project__more-info {
+.project__more-info--wrapper {
   position: relative;
   border-radius: 20px;
-  background-color: white;
   width: 100%;
   max-width: 1300px;
   height: 90vh;
   margin: 0 64px;
-  padding: 64px 32px 32px 32px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  /* overflow: hidden; */
+  padding: 64px 22px 32px 32px;
+  background-color: white;
+}
+
+.project__more-info {
+  height: calc(90vh - 64px * 2);
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 .project__more-info > div {
-  /* width: 100%; */
   display: flex;
   gap: 16px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* overflow-x: hidden;
-  overflow-y: scroll; */
 }
 
 .project__more-info ul {
@@ -553,16 +553,19 @@ projectsBtn--black .project__title {
   list-style-position: inside;
 }
 
-.project__more-info > div > p:first-of-type > img {
-  width: 100%;
+.project__more-info img {
+  max-width: 100%;
 }
 
 .closeBtn--more-info {
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 2.5rem;
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: -16px;
+  right: -16px;
+  background-color: rgb(212, 212, 212);
+  padding: 4px;
+  border-radius: 50%;
 }
 
 /*
